<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="au.com.newint.newinternationalist.CategoriesActivity">

    <item android:id="@+id/about"
        android:title="@string/action_about"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/categories_refresh"
        android:title="@string/categories_refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
