<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="au.com.newint.newinternationalist.ArticleActivity.ArticleFragment">

        <TextView
            android:id="@+id/article_title"
            android:textSize="26sp"
            android:text="@string/article_title"
            android:textColor="@color/primary_text_default_material_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/article_teaser"
            android:textSize="16sp"
            android:text="@string/article_teaser"
            android:layout_marginTop="@dimen/article_teaser_margin_top"
            android:textColor="@color/bright_foreground_disabled_material_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article_title" />

        <TextView
            android:id="@+id/article_categories"
            android:text="@string/article_categories"
            android:layout_marginTop="@dimen/article_categories_margin_top"
            android:textColor="@color/button_material_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article_teaser" />

        <WebView
            android:id="@+id/article_body"
            android:layout_marginTop="@dimen/article_body_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article_categories" />

    </RelativeLayout>

</ScrollView>
