<?xml version="1.0" encoding="utf-8"?>
<!-- CardView -->
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/toc_margin"
    card_view:cardCornerRadius="@dimen/card_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/toc_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="@dimen/toc_cover_padding"
            android:paddingBottom="@dimen/toc_cover_padding"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/article_title"
            android:id="@+id/article_title"
            android:textSize="@dimen/article_font_size_title"
            android:textColor="@color/primary_text_default_material_light"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toc_cover" />

        <TextView
            android:text="@string/article_teaser"
            android:id="@+id/article_teaser"
            android:textColor="@color/bright_foreground_disabled_material_light"
            android:paddingTop="0dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_title" />

        <TextView
            android:text="@string/article_categories"
            android:id="@+id/article_categories"
            android:textColor="@color/button_material_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:layout_below="@id/article_teaser" />

    </RelativeLayout>

</android.support.v7.widget.CardView>